--- a/applications/frontend/src/app/landing.module.css
+++ b/applications/frontend/src/app/landing.module.css
@@ -2,39 +2,24 @@
 .backgroundContainerOuter {
     position: absolute;
     width: 100vw;
-    height: 250vw;
-    overflow: hidden;
+    height: 130vmax;
+    background-color: black;
+    top: -10vw;
+    clip: rect(auto auto auto auto);
 }
 
 .backgroundContainerInner {
     position: relative;
     width: 100vw;
     height: 100vmin;
-    top: 0;
-    overflow: hidden;
-}
-
-.gradient {
-    position: absolute;
-    width: 100vw;
-    height: 100vh;
-    z-index: 10;
-    /* background: linear-gradient(
-        0deg, 
-        rgba(0,0,0,1) calc((50vh - 50vmin) / 100vh),
-        rgba(0,0,0,0) calc((55vh - 50vmin) / 100vh),
-        rgba(0,0,0,0) calc((45vh + 50vmin) / 100vh),
-        rgba(0,0,0,1) calc((50vh + 50vmin) / 100vh)
-    ); */
-
 }
 
 .backgroundCenter {
-    position: fixed;
+    position: sticky;
+    display: table-cell;
+    vertical-align: middle;
     width: 100vw;
-    height: 100vmin;
-    top: 50%;
-    transform: translateY(-50%);
+    height: 100vw;
 }
 
 .backgroundPlanet {
@@ -42,11 +27,10 @@
     z-index: 1;
     top: 0;
     left: 0;
-}
-
-.surfaceContainer {
-    position: sticky;
-    top: 0;
+    animation-name: planetAnimation;
+    animation-duration: 1ms;
+    animation-direction: alternate;
+    animation-timeline: scroll();
 }
 
 .planetHorizon {
@@ -54,6 +38,20 @@
     z-index: 3;
     top: 0;
     left: 0;
+    animation-name: planetAnimation;
+    animation-duration: 1ms;
+    animation-direction: alternate;
+    animation-timeline: scroll();
+}
+
+.surfaceContainer {
+    position: sticky;
+    top: 0;
+    animation-name: surfaceAnimation;
+    animation-duration: 1ms;
+    animation-direction: alternate;
+    animation-timeline: scroll();
+    top: -10vw;
 }
 
 .surfaceHorizon {
@@ -61,7 +59,7 @@
     z-index: 3;
     top: 0;
     left: 0;
-    text-shadow: 0px 7px 2px #000000dd;
+    text-shadow: 0 0.2rem 0.1rem #000000dd;
     mix-blend-mode: soft-light;
 }
 
@@ -70,130 +68,47 @@
     z-index: 0;
     top: 0;
     left: 0;
+    animation-name: surfaceAnimation;
+    animation-duration: 1ms;
+    animation-direction: alternate;
+    animation-timeline: scroll();
 }
 
 .rocket {
     position: absolute;
+    animation-name: rocketAnimation;
+    animation-duration: 1ms;
+    animation-direction: alternate;
+    animation-timeline: scroll();
 }
 
-@keyframes containerScroll {
-    0% {
-        top: 0;
-    }
-
-    100% {
-        top: -50%;
-    }
-}
-
-@keyframes pHorizonScroll {
+@keyframes planetAnimation {
     0% {
         opacity: 100%;
         top: 0;
     }
 
     50% {
-        opacity: 0;
+        opacity: 0%;
+        top: 10vw;
     }
 
     100% {
-        opacity: 0;
-        top: -25%;
+        opacity: 0%;
+        top: 10vw;
     }
 }
 
-@keyframes sHorizonScroll {
+@keyframes rocketAnimation {
     0% {
-        opacity: 0;
+        top: 10vw;
     }
 
     50% {
-        opacity: 0;
-    }
-
-    60% {
-        opacity: 100%;
-        top: 20%;
+        top: -5vw;
     }
 
     100% {
-        opacity: 100%;
-        top: 20%;
-    }
-}
-
-@keyframes planetScroll {
-    0% {
-        opacity: 100%;
-        top: 0;
-    }
-
-    50% {
-        opacity: 0;
-        top: -10%;
-    }
-
-    100% {
-        opacity: 0;
-    }
-}
-
-@keyframes surfaceScroll {
-    0% {
-        opacity: 0;
-        top: 0;
-    }
-
-    50% {
-        opacity: 100%;
-        top: 0;
-    }
-
-    100% {
-        opacity: 100%;
-        top: 0;
-    }
-}
-
-@keyframes rocketScroll {
-    0% {
-        top: 30%;
-    }
-
-    50% {
-        top: 20%;
-    }
-
-    100% {
-        top: 20%;
-    }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-    @supports (animation-timeline: scroll()) {
-        .backgroundPlanet {
-            animation: planetScroll linear both;
-            animation-timeline: scroll();
-        }
-
-        .backgroundSurface {
-            animation: surfaceScroll linear both;
-            animation-timeline: scroll();
-        }
-
-        .rocket {
-            animation: rocketScroll linear both;
-            animation-timeline: scroll();
-        }
-
-        .planetHorizon {
-            animation: pHorizonScroll linear both;
-            animation-timeline: scroll();
-        }
-
-        .surfaceHorizon {
-            animation: sHorizonScroll linear both;
-            animation-timeline: scroll();
-        }
+        top: -5vw;
     }
 }
